Stop losses for other signals, UI fixes, notifications on auto technical analysis + subwaves tracking